syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.admin;

import "DistLedgerCommonDefinitions.proto";

// Administrator Interface of the DistLedger Service

message ActivateRequest {}

message ActivateResponse {}

message DeactivateRequest {}

message DeactivateResponse {}

message GossipRequest {
  string qualificator = 1;
}

message GossipResponse {
  ErrorGossip error = 1;
}

message getLedgerStateRequest {}

message getLedgerStateResponse {
  repeated LedgerState ledgerState = 1;
}

enum ErrorGossip {
  OK = 0;
  FAILED = 1;
}

service AdminService {
  rpc activate(ActivateRequest) returns (ActivateResponse);
  rpc deactivate(DeactivateRequest) returns (DeactivateResponse);
  rpc gossip(GossipRequest) returns (GossipResponse);
  rpc getLedgerState(getLedgerStateRequest) returns (getLedgerStateResponse);
}